--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,6 @@ compiler:
   - gcc
   - clang
 script: ./configure && make
+before_install:
+  - sudo apt-get update -qq
+  - sudo apt-get install -y libpam0g-dev libpam0g
