- fix build for Clang

--- a/Makefile.in
+++ b/Makefile.in
@@ -6,7 +6,7 @@ INSTALLDIR=$(DESTDIR)@libdir@/security
 CC=@CC@
 CFLAGS=@CFLAGS@ -Wall -fPIC -DPIC -pedantic
 LIBS=@LIBS@ @SKEYLIB@ @PAMLIB@
-LDFLAGS=@LDFLAGS@
+LDFLAGS=-shared -s @LDFLAGS@
 INTERNAL_SKEYLIB=@INTERNAL_SKEYLIB@
 
 INSTALL=@INSTALL@ -m 644
